# times-doctor

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  INSTALL.md  LICENSE  PUBLISH.md  QUICKSTART_PUBLISH.md  README.md  TESTING.md  config.toml.example  lst_parsed_output.json  pyproject.toml  pytest.ini
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml  release.yml
_llm_calls/: 20251108_103151_759513_request.json  20251108_103353_918990_response.json  20251108_103353_921093_response.json  20251108_103420_175109_response.json
docs/: PRD.md  lst_parser_implementation.md  lst_parsing_plan.md  qa_check_parser.md
history/: cplex-progress-monitoring.md  cplex_validation_integration.md  job-cancellation-feature.md  llm_cache_implementation.md  lst_parser_improvements.md  multi-run-progress-monitor.md  openai_responses_api_improvement_plan.md  parallel-execution.md  solver_opt_file_generation.md
prompts/: extraction_sections.txt  manifest.json  qa_check_compress.txt  review.txt
prompts/cplex_options/: cplex_options_gams49_detailed.json  cplex_options_gams49_detailed.md
prompts/explain_infeasibility/: v1.txt
prompts/extraction_sections/: v1.txt
prompts/llm_prompt/: v1.txt
prompts/qa_check_compress/: v1.txt
prompts/review/: v1.txt
prompts/review_qa_fixes/: v1.txt
prompts/solver_options_review/: v1.txt
scripts/: convert_cplex_options_md_to_json.py  test_lst_parser.py
src/times_doctor/: __init__.py  cli.py  cplex_progress.py  gurobi_progress.py  interactive_cancel.py  io_utils.py  job_control.py  llm.py  logger.py  lst_parser.py  multi_run_progress.py  prompts.py  qa_check_parser.py  types.py
src/times_doctor/core/: __init__.py  config.py  cost_estimator.py  cplex_validator.py  exceptions.py  http_client.py  io_utils.py  llm.py  llm_cache.py  lst_parser.py  opt_renderer.py  prompts.py  qa_check_parser.py  redactor.py  solver_models.py  solver_validation.py  types.py
tests/: __init__.py  conftest.py  test_config.py  test_cplex_validator.py  test_llm_cache.py  test_lst_condense_robustness.md  test_lst_condense_robustness.py  test_lst_parser.py  test_opt_renderer.py  test_platform_paths.py  test_solver_options_prompt.py  test_solver_validation.py
tests/fixtures/: fake_llm.py
tests/fixtures/api_responses/: openai_gpt5_response.json
tests/fixtures/sample_files/: test.condensed.json  test.condensed.md
tests/integration/: __init__.py  test_anthropic_streaming.py  test_openai_live.py  test_openai_streaming.py  test_openai_structured_output.py  test_real_data.py
tests/unit/: test_cli.py  test_cplex_progress.py  test_ensure_threads.py  test_http_retry.py  test_llm_api.py  test_lst_extraction.py  test_multi_run_progress.py  test_prompts.py  test_qa_check_parser.py  test_runlog_filtering.py
